--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,34 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<!-- <ion-header> -->
+  <!-- <ion-toolbar>
     <ion-title>
-      Blank
+      Meal Connect
     </ion-title>
+  </ion-toolbar> -->
+<!-- </ion-header> -->
+
+<ion-content class="ion-padding">
+
+  <ion-card mode="ios">
+    <ion-row *ngFor="let d of dates;">
+      <ion-col size="5">
+        <ion-item>
+          <ion-input placeholder="Date" [(ngModel)]="d.date"></ion-input>
+        </ion-item>
+      </ion-col>
+      <ion-col size="7">
+        <ion-item>
+          <ion-input placeholder="Poundage" [(ngModel)]="p[d.date]"></ion-input>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-card>
+  <ion-toolbar mode="ios" color="none">
+    <ion-button slot="end" color="light">
+      Add
+    </ion-button>
+    <ion-button slot="end" class="ion-margin-horizontal" (click)="show()">
+      Submit
+    </ion-button>
   </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
