--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,7 @@
 <ion-content class="ion-padding">
 
   <ion-card mode="ios">
-    <ion-row *ngFor="let d of dates;">
+    <ion-row *ngFor="let d of dates; let i = index;">
       <ion-col size="5">
         <ion-item>
           <ion-input placeholder="Date" [(ngModel)]="d.date"></ion-input>
@@ -18,17 +18,30 @@
       <ion-col size="7">
         <ion-item>
           <ion-input placeholder="Poundage" [(ngModel)]="p[d.date]"></ion-input>
+          <ion-buttons slot="end" class="ion-no-margin" style="margin-right: -10px;">
+            <ion-button (click)="remove(i)">
+              <ion-icon name="close-circle-outline" slot="icon-only"></ion-icon>
+            </ion-button>
+          </ion-buttons>
         </ion-item>
       </ion-col>
     </ion-row>
   </ion-card>
+
   <ion-toolbar mode="ios" color="none">
-    <ion-button slot="end" color="light">
+    <ion-button slot="end" color="light" (click)="remove()">
+      Remove
+    </ion-button>
+    <ion-button slot="end" color="light" (click)="add()">
       Add
     </ion-button>
-    <ion-button slot="end" class="ion-margin-horizontal" (click)="show()">
+    <ion-button slot="end" class="ion-margin-horizontal" (click)="send()">
       Submit
     </ion-button>
   </ion-toolbar>
-
 </ion-content>
+
+
+
+<!-- <ion-footer>
+</ion-footer> -->
